<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nk_now">NK Now</string>
    <string name="background_one_image_title">15 Images</string>
    <string name="background_image_one_description">The Beauty of Stars</string>
    <string name="background_two_subdescription">Government bringing out new regulations against the Chinese company Huawei for their routers and cellphones</string>
    <string name="background_two_description">TOP 10</string>
    <string name="background_two_title">No.25</string>
    <string name="background_three_description">From World Times</string>
    <string name="background_three_title">Tale of the City</string>
    <string name="background_three_super_title">yes to all travelers!</string>
    <string name="trending_videos">Trending Videos</string>
    <string name="login">Login</string>
    <string name="email_facebook">Email/Facebook</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="valid_user">testUser001</string>
    <string name="valid_password">password1</string>
    <string name="nk_image">NK_Image</string>
    <string name="title_activity_landing_page">LandingPageActivity</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="films">Films</string>
    <string name="user_photo">User photo</string>
    <string name="username">Helen Joseph</string>
    <string name="premium_member">Premium Member</string>
    <string name="offline_mode">OFFLINE MODE</string>
    <string name="offline_description">ONLY DOWNLOADED CONTENT WILL BE AVAILABLE</string>
    <string name="optimized_playback">OPTIMIZED PLAYBACK</string>
    <string name="optimized_playback_description">AUTOMATICALLY ADJUSTS THE PLAYBACK QUALITY BASED ON YOUR CONNECTION</string>
    <string name="loudness_normalization">LOUDNESS NORMALIZATION</string>
    <string name="wifi_streaming">WIFI STREAMING</string>
    <string name="normal">NORMAL</string>
    <string name="high_with_checkmark">HIGH \u2713</string>
    <string name="cellular_streaming">CELLULAR STREAMING</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="version">VERSION: 1.1.5</string>
    <string name="original_films">ORIGINAL FILMS</string>
    <string name="shorts">SHORTS</string>
    <string name="favorite_original_films">FAV ORIGINAL FILMS</string>
    <string name="favorite_short_films">FAV SHORTS</string>
    <string name="what_falls_behind_these_hills">What falls behind these hills</string>
    <string name="over_the_hill">Over the Hill</string>
    <string name="tasty_treats">Tasty Treats</string>
    <string name="top_10_popsicle_flavors">Top 10 Popsicle Flavors</string>
    <string name="subtitle_description">These top ten popsicle flavors are so good, Americans cant seem to put them down</string>
    <string name="no_results_found">No results found.</string>
    <string name="app_name">NK Now</string>
    <string name="search">Search</string>
    <string name="features">FEATURES</string>
    <string name="music_videos">MUSIC VIDEOS</string>
    <string name="documentaries">DOCUMENTARIES</string>
    <string name="nk_live">NK LIVE</string>
    <string name="nk_link">NK LINK</string>
    <string name="explore_finalists">EXPLORE FINALISTS</string>
    <string name="trending_events">TRENDING EVENTS</string>
    <string name="fav_features">FAV FEATURES</string>
    <string name="favorite_music_videos">FAV MUSIC VIDEOS</string>
    <string name="favorite_documentaries">FAV DOCUMENTARIES</string>
    <string name="best_in_fest">BEST IN FEST</string>
    <string name="monthly_contests">MONTHLY CONTEST</string>
    <string name="sundance">SUNDANCE</string>
    <string name="tribeca">TRIBECA</string>
    <string name="cannes">CANNES</string>
    <string name="berlin">BERLIN</string>
    <string name="venice">VENICE</string>
    <string name="rain_dance">RAIN DANCE</string>
    <string name="tiff">T.I.F.F</string>
</resources>
