<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/featuredFilmThree"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_three" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000" />

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/background_three_super_title"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/recommend_big_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="90dp"
        android:text="@string/background_three_title"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recommend_big_text"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/background_three_description"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="40dp"
        android:background="#ffffff" />

    <View
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:layout_above="@id/title_textview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="95dp"
        android:background="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@id/title_textview"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#ffffff" />

    <View
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:layout_above="@id/title_textview"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:background="#ffffff" />
</RelativeLayout>